# rrc_package

./: .gitignore  CMakeLists.txt  automated_submission_eval.sh  goal.json  package.xml  roboch.json  run  run_in_simulation.py  setup.py
goals/: goal1.json  goal10.json  goal11.json  goal12.json  goal2  goal20.json  goal30.json  goal31.json  goal32.json  goal4.json  goal40.json  goal41.json  goal42.json
models/ppo-scaled-rew-cuboid/ppo-scaled-rew-cuboid_s0/: config.json  progress.txt  vars0.pkl  vars10.pkl  vars100.pkl  vars110.pkl  vars120.pkl  vars130.pkl  vars140.pkl  vars150.pkl  vars160.pkl  vars170.pkl  vars180.pkl  vars190.pkl  vars20.pkl  vars200.pkl  vars210.pkl  vars220.pkl  vars230.pkl  vars240.pkl  vars30.pkl  vars40.pkl  vars50.pkl  vars60.pkl  vars70.pkl  vars80.pkl  vars90.pkl  varsfinal.pkl
models/scaled_actions/scaled_actions_s0/: config.json  progress.txt  vars249.pkl
python/rrc_example_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/rrc_iprl_package/: pybullet_utils.py  run_rrc_sb.py
python/rrc_iprl_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/rrc_iprl_package/control/: control_policy.py  control_policy_refactor.py  control_trifinger_platform.py  controller_utils.py  custom_pinocchio_utils.py
scripts/: eval_policy.py  generate_goals.py  hierarchical_lift_task.py  move_up_and_down.py  residual_lift_task.py  run_rl  save_obj_pos.py  test.py  test_residual_env.py  test_rl_env.py
scripts/plotting/: plot_control_policy_log.py  plot_obj_pos.py  plot_robot_data.py  test_ft_tracking.py  test_ft_tracking.sh
(+43 files in other folders)
