<?xml version="1.0"?>
<package format="2">
  <name>rrc_iprl_package</name>
  <version>1.0.0</version>
  <description>
      RRC package for Team Yoda
  </description>

  <maintainer email="krshna@stanford.edu">Krishnan Srinivasan</maintainer>

  <license>BSD 3-clause</license>

  <url type="website">https://real-robot-challenge.com/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_fingers</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>

  <export></export>
</package>
